# Project1_EmbeddedSystems_IOT

./: README.md
C-Code/JsonFile/: PinStates.json
C-Code/include/: HTTPRequests.h  IOManagement.h  ImageGet.h  JsonAdmin.h  ManualGPIO.h  Monitoring.h
C-Code/lib/: HTTPRequests.c  IOManagement.c  ImageGet.c  JsonAdmin.c  Makefile.am  ManualGPIO.c  Monitoring.c
C-Code/src/: Makefile  Makefile.am  Test  main.c  test.c
webserver/: index.html  lights.json  sensors.json  server.py  server.py.orig  take_picture.json  tokens.json  user_db.json
webserver/website/: index.html
webserver/website/common/: lights.html  login.html  model.html  model.html.orig
webserver/website/css/: lights.css  login.css  modal.css  model.css
webserver/website/js/: login.js  model.js  toc.js
webserver/website/resources/: camera.gltf  door.gltf  house.SLDPRT  house.glb  house.gltf  lamp.gltf
